    several other build systems by using different "generators" provided
    by CMake (for instance Ninja, CodeBlocks, Eclipse, KDevelop3, Xcode, etc.).
    See README.CMake.txt for more information.

  - autoconf/configure is still supported by the FLTK team for backwards
    compatibility with older systems that lack CMake support.


  New Features and Extensions

  - (add new items here)
  - Fl_Printer::begin_job() uses by default the Gnome print dialog on the X11
    platform when the GTK library is available at run-time. That can be turned off
    with Fl::option(OPTION_PRINTER_USES_GTK, false).
  - New member functions Fl_Paged_Device::begin_job() and begin_page()
    replace start_job() and start_page(). The start_... names are maintained
    for API compatibility.
  - New member function Fl_Image::scale(int width, int height) to set
    the drawing size of an image independently from its data size. The
    same function was previously available only for class Fl_Shared_Image
    and with FL_ABI_VERSION >= 10304. New member functions Fl_Image::data_w()
    and Fl_Image::data_h() give the width and height of the image data.
  - OpenGL draws text using textures on all platforms, when the necessary
    hardware support is present (a backup mechanism is available in absence
    of this support). Thus, all text drawable in Fl_Window's can be drawn
    in Fl_Gl_Window's (STR#3450).
  - New member functions Fl::program_should_quit(void),
    and Fl::program_should_quit(int) to support detection by the library
    of a request to terminate cleanly the program.
  - MacOS platform: the processing of the application menu's "Quit" item
    has been changed. With FLTK 1.3.x, the application terminated when all
    windows were closed even before Fl::run() of Fl::wait() could return.
    With FLTK 1.4, Fl::run() returns so the app follows its normal termination path.
  - MacOS platform: Added support for rescaling the GUI of any app at run-time